<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/playFragment"
        android:icon="@drawable/ic_play"
        android:title="@string/nav_play" />
    <item
        android:id="@+id/friendsFragment"
        android:icon="@drawable/ic_friends"
        android:title="@string/nav_friends" />
    <item
        android:id="@+id/leaderboardFragment"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/nav_leaderboard" />
    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_inventory"
        android:title="@string/nav_inventory" />
    <item
        android:id="@+id/shopFragment"
        android:icon="@drawable/ic_shop"
        android:title="@string/nav_shop" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>